--- a/css/user_plans.css
+++ b/css/user_plans.css
@@ -172,6 +172,123 @@ main {
         background-color: white;
     }
 
+    .mainContent .filterPlans {
+        /* display: flex;
+        justify-content: center; */
+        /* display: grid; */
+        padding: 20px;
+    }
+
+    .mainContent .search_bar {
+        width: 300px;
+        border: 1px solid black;
+        background-color: white;
+        height: 100px;
+    }
+    
+    .mainContent .search_bar button {
+        margin-top: 10px;
+        width: 20%;
+        padding: 6px;
+        background-color: #0e8fc8;
+        color: #fff;
+        cursor: pointer;
+        border: 1px solid #0e8fc8;
+        outline: none;
+        float: right;
+    }
+
+    .mainContent .price_search {
+        width: 300px;
+        border: 1px solid black;
+        background-color: white;
+        height: 100px;
+        margin-top: 40px;
+    }
+
+    .mainContent .price_search input[type=range] {
+        -webkit-appearance: none;
+        margin: 20px 0;
+        width: 100%;
+    }
+
+    .mainContent .price_search input[type=range]:focus {
+        outline: none;
+    }
+
+    .mainContent .price_search input[type=range]::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 4px;
+        cursor: pointer;
+        animate: 0.2s;
+        background: #03a9f4;
+        border-radius: 25px;
+    }
+
+    .mainContent .price_search input[type=range]::-webkit-slider-thumb {
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        background: #fff;
+        box-shadow: 0 0 4px 0 rgba(0,0,0, 1);
+        cursor: pointer;
+        -webkit-appearance: none;
+        margin-top: -8px;
+    }
+
+    .mainContent .price_search input[type=range]:focus::-webkit-slider-runnable-track {
+        background: #03a9f4;
+    }
+
+    .mainContent .price_search .range-value{
+        position: relative;
+        top: -50%;
+    }
+
+    .mainContent .price_search span{
+        width: 30px;
+        height: 24px;
+        line-height: 24px;
+        text-align: center;
+        background: #03a9f4;
+        color: #fff;
+        font-size: 12px;
+        display: block;
+        position: absolute;
+        /* left: 50%; */
+        transform: translate(-50%, 0);
+        border-radius: 6px;
+    }
+
+    .mainContent .price_search span:before{
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-top: 10px solid #03a9f4;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        margin-top: -1px;
+    }
+
+    .mainContent input {
+        margin-top: 10px;
+        width: 80%;
+        padding: 6px;
+        font-size: 13px;
+        line-height: 1;
+        color: #555;
+        background-color: #fff;
+        background-image: none;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    }
+
     .mainContent .filterPlans .filter_button {
         display: none;
         color: white;
